@@ -105,11 +105,6 @@ const createCharacterEmbed = async (
           value: `${character.money}`,
           inline: true,
         },
-        {
-          name: `Equipamento`,
-          value: `**Armadura: cota de malha**`,
-          inline: false,
-        },
       ];
 
       break;
